       value of other-config:dp-sn in the Bridge table.
     * Added support to watch CONTROLLER port status in fast failover group.
     * New action "delete_field".
   - DPDK:
     * Deprecated DPDK pdump packet capture support removed.
     * Deprecated DPDK ring ports (dpdkr) are no longer supported.
     * Add hardware offload support for VLAN Push/Pop actions (experimental).
   - Linux datapath:
     * Support for kernel versions up to 5.5.x.
   - AF_XDP:
     * New netdev class 'afxdp-nonpmd' for netdev-afxdp to save CPU cycles
       by enabling interrupt mode.
   - Userspace datapath:
     * Removed artificial datapath flow limit that was 65536.
       Now number of datapath flows is fully controlled by revalidators and the
       'other_config:flow-limit' knob.
     * Add support for conntrack zone-based timeout policy.
     * New configuration knob 'other_config:lb-output-action' for bond ports
       that enables new datapath action 'lb_output' to avoid recirculation
       in balance-tcp mode.  Disabled by default.
   - Tunnels: TC Flower offload
     * Tunnel Local endpoint address masked match are supported.
     * Tunnel Romte endpoint address masked match are supported.


v2.13.0 - 14 Feb 2020
---------------------
   - OVN:
     * OVN has been removed from this repository. It now exists as a
       separate project. You can find it at
       https://github.com/ovn-org/ovn.git
   - Userspace datapath:
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
     * Add support for conntrack zone limits.
     * Command "ovs-appctl dpctl/dump-flows" refactored to show subtable
       miniflow bits for userspace datapath.
   - AF_XDP:
     * New option 'use-need-wakeup' for netdev-afxdp to control enabling
       of corresponding 'need_wakeup' flag in AF_XDP rings.  Enabled by default
       if supported by libbpf.
     * 'xdpmode' option for netdev-afxdp renamed to 'xdp-mode'.
       Modes also updated.  New values: